--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    body
+    Loading...<br><progress>.</progress></br>
   </body>
 </html>
